project 2 and 3 added

--- a/index.html
+++ b/index.html
@@ -192,9 +192,18 @@
               <div class="skills__skill">R</div>
               <div class="skills__skill">MySQL</div>
               <div class="skills__skill">Tableau</div>
-              <div class="skills__skill">AWS</div>
+              <div class="skills__skill">Amazon Web Services</div>
               <div class="skills__skill">NLP</div>
-              <div class="skills__skill">GCP</div>
+              <div class="skills__skill">Google Cloud</div>
+              <div class="skills__skill">Apache Spark</div>
+              <div class="skills__skill">Apache Kafka</div>
+              <div class="skills__skill">Airflow</div>
+              <div class="skills__skill">Mage-AI</div>
+              <div class="skills__skill">ETL</div>
+              <div class="skills__skill">DataBricks</div>
+              <div class="skills__skill">PostgreSQL</div>
+              <div class="skills__skill">MongoDB</div>
+              <div class="skills__skill">BigQuery</div>
               <div class="skills__skill">Django</div>
               <div class="skills__skill">Git</div>
               <div class="skills__skill">REST APIs</div>
