--- a/project-3.html
+++ b/project-3.html
@@ -112,33 +112,21 @@
             <div class="project-details__desc">
               <h4 class="project-details__content-title">Project Overview</h4>
               <p class="project-details__desc-para">
-                The primary goal
-                of this project is to establish a comprehensive data analytics pipeline for NYC TLC data using a combination of Python, Google Cloud Platform (GCP), and Mage-AI Data Pipeline tool. The ultimate objective is to develop an analytics dashboard using Looker Studio.
-              </p>
-              <h4 class="project-details__content-title">Project Execution</h4>
+                In this real-time stock market data engineering project, I utilized Apache Kafka as the central component for a robust data pipeline. Leveraging Python, AWS (S3, Athena, Glue Crawler, EC2), the goal was to enable real-time data streaming and processing, emphasizing operational aspects in data engineering to build End-to-End data pipeline.
+                </p>
+              <h4 class="project-details__content-title">Technology Used</h4>
               <p class="project-details__desc-para">
-                Data Extraction/Acquisition: Dataset is acquired from the official nyc.gov website, it focusses on TLC's yellow and green taxi trip records. This dataset includes crucial information such as pick-up and drop-off times, locations, trip distances, rate types, payment types.
-              </p>
-
-              <p class="project-details__desc-para">
-              Data Modeling: The Dataset/flat file is converted into STAR Schema. A comprehensive data model is designed by creating Fact and Dimension tables based on the existing data frame. The Schema is implemented in python.
-              </p>
-
-              <p class="project-details__desc-para">
-                ETL and Data Transformation: I leveraged Mage-AI for ETL, which is an excellent data pipeline tool for transforming and integrating data. The data is Extracted from the Google Cloud Storage, Transformed into desired format using Python and Loaded into BigQuery for further analysis. All this process is being done on a Virtual Machine on Cloud.
-              </p>
-
-              <p class="project-details__desc-para">
-                Cloud Computing and Data Analysis: Google Cloud Platform is used as the Cloud Infrastructure for handling robust and scalable data . GCP Services used - Compute Engine, Cloud Storage, BigQuery, Firewall, Looker Studio
-              </p>
-
-              <p class="project-details__desc-para">
-                Data Visualization: Looker Studio is used for visualization of data and building dashboards. The data is extracted from BigQuery tables.
+                <strong> Python </strong> – Serving as the core of our data processing operations. </br>
+                <strong>Amazon Web Services (AWS) </strong> – For robust and scalable cloud infrastructure. </br>
+                <strong> Apache Kafka </strong> – Core of the project, enabling real-time data streaming and processing. </br>
+                <strong> AWS S3 (Simple Storage Service) </strong> – Employed for secure and dependable data storage. </br>
+                <strong> AWS Athena & Glue Crawler </strong> – Leveraged for efficient data querying and cataloging. </br>
+                <strong> AWS EC2 </strong> – Used for accessing powerful and scalable computing capacity in the cloud.
               </p>
               <h4 class="project-details__content-title">Infrastructure</h4>
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/ProjectImages/P1NYC.png"
+              src="./assets/ProjectImages/P3StockMarket.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -150,10 +138,12 @@
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
                 <div class="skills__skill">Python</div>
-                <div class="skills__skill">Google Cloud Platform</div>
-                <div class="skills__skill">Mage-AI</div>
-                <div class="skills__skill">BigQuery</div>
-                <div class="skills__skill">Looker Studio</div>
+                <div class="skills__skill">Amazon Web Services</div>
+                <div class="skills__skill">Apache Kafka</div>
+                <div class="skills__skill">AWS S3</div>
+                <div class="skills__skill">AWS Athena</div>
+                <div class="skills__skill">AWS Glue</div>
+                <div class="skills__skill">AWS EC2</div>
 
               </div>
             </div>
