updated About Me section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
                 Hey! It's
                 <strong>Akhil Rachure</strong>
                 and I'm a <strong> Data Engineer </strong> and
-                <strong> Backend Developer  </strong>
+                <strong> Backend Developer  </strong> with expertise in Data Engineering, Machine Learning,
+                Data Visualization, and Backend Development. I have extensive experience working across various
+                roles in the end-to-end Data Science life cycle. Over the years, I spent considerable time working on
+                Data Extraction, Data Analysis, Building ML models, and developing ETL Data Pipelines.
 
               </p>
               <p class="about__content-details-para">
